<resources>
    <string name="app_name">GetFitness</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="common_email">Email</string>
    <string name="common_password">Password</string>
    <string name="fragment_login_forgot_password">Forgot Password?</string>
    <string name="common_submit">Submit</string>
    <string name="fragment_login_register_question">Don\'t hav an account yet? \n click here!</string>
    <string name="common_user_name">User Name</string>
    <string name="common_confirm_password">Confirm Password</string>
    <string name="common_register">Register</string>
    <string name="fragment_reset_password_message">Enter your email so we can send you an email to reset your password</string>
    <string name="fragment_register_success_register_message">User has been registered with success!</string>
    <string name="error_lenght_password">Password must be at least 6 characters long!</string>
    <string name="error_invalid_email">This email is invalid!</string>
    <string name="error_already_used_email">This email has already been used!</string>
    <string name="error_message_for_register_user">An error occurred while registering!</string>
    <string name="common_offline_message">You\'re Offline!</string>
    <string name="common_empty_fields_message">Some field is empty!</string>
    <string name="fragment_register_password_not_same">The passwords is not same!</string>
    <string name="common_empty_field_message">The field is empty!</string>
    <string name="fragment_reset_password_success_message">An email with password reset has been sent to you!</string>
    <string name="common_error_message">An error hs been occurred!</string>
    <string name="content_description_float_action_button">Add Button</string>
    <string name="common_name">Name</string>
    <string name="common_description">Description</string>
    <string name="fragment_training_form_add_text">Add Exercise</string>
    <string name="common_date">Date</string>
    <string name="fragment_feed_get_trainings_error">There was an error getting your trainings</string>
    <string name="common_observations">Observations</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_confirm">Confirm</string>
    <string name="common_permission_denied">Permission denied</string>
    <string name="common_field_required">This field required</string>
    <string name="datepicker_title">Select a date for this training</string>
    <string name="fragment_training_form_button_date_content_description">Select date button</string>
    <string name="fragment_training_form_training_save_success">Successfully save training!</string>
    <string name="fragment_training_form_save_error">An error occurred while saving the training!</string>
    <string name="item_exercise_button_remove_description">remove exercise</string>
    <string name="common_get_training_error">There was an error getting the training</string>
    <string name="common_edit">Edit</string>
    <string name="fragment_training_details_button_text">Show Description</string>
    <string name="common_delete">Delete</string>
    <string name="fragment_training_form_alert_dialog_message">Do you really want to delete this training?</string>
    <string name="fragment_training_form_successfully_delete_training_message">Training deleted successfully!</string>
    <string name="fragment_training_form_delete_training_error">An error occurred while trying to delete the training</string>
    <string name="fragment_login_submit_error">An error has been occurred, please check your credentials!</string>
    <string name="fragment_welcome_screen_button_text">Go to Home</string>
    <string name="fragment_welcome_message">Welcome to GetFitness %s</string>
    <string name="fragment_feed_empty_list_message">You still don\'t have trainings!! \n Add new trainings in the button below</string>
    <string name="common_search">Search</string>
</resources>