<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/on_primary"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".ui.authentication.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edittext_email_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_edittext_horizontal_margin"
            android:hint="@string/common_email"
            android:textColorHint="@color/on_secondary"
            app:boxBackgroundColor="@color/secondary"
            app:boxCornerRadiusBottomEnd="@dimen/default_radius"
            app:boxCornerRadiusBottomStart="@dimen/default_radius"
            app:boxCornerRadiusTopEnd="@dimen/default_radius"
            app:boxCornerRadiusTopStart="@dimen/default_radius"
            app:boxStrokeColor="@color/on_secondary"
            app:boxStrokeWidth="0dp"
            app:hintTextColor="@color/on_secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/on_secondary"
                 />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edittext_password_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_vertical_margin"
            android:hint="@string/common_password"
            android:orientation="vertical"
            android:textColorHint="@color/on_secondary"
            app:boxBackgroundColor="@color/secondary"
            app:boxCornerRadiusBottomEnd="@dimen/default_radius"
            app:boxCornerRadiusBottomStart="@dimen/default_radius"
            app:boxCornerRadiusTopEnd="@dimen/default_radius"
            app:boxCornerRadiusTopStart="@dimen/default_radius"
            app:boxStrokeColor="@color/on_secondary"
            app:boxStrokeWidth="0dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/on_secondary"
            app:hintTextColor="@color/on_secondary"
            app:layout_constraintEnd_toEndOf="@id/edittext_email_login"
            app:layout_constraintStart_toStartOf="@id/edittext_email_login"
            app:layout_constraintTop_toBottomOf="@id/edittext_email_login">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/on_secondary" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textview_forgot_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_vertical_margin"
            android:gravity="end"
            android:text="@string/fragment_login_forgot_password"
            android:textColor="@color/primary"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintEnd_toEndOf="@id/edittext_password_login"
            app:layout_constraintStart_toStartOf="@id/edittext_password_login"
            app:layout_constraintTop_toBottomOf="@id/edittext_password_login" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_submit"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_button_height"
            android:layout_marginTop="@dimen/default_vertical_margin"
            android:text="@string/common_submit"
            app:cornerRadius="@dimen/default_radius"
            app:layout_constraintEnd_toEndOf="@id/edittext_email_login"
            app:layout_constraintStart_toStartOf="@id/edittext_email_login"
            app:layout_constraintTop_toBottomOf="@id/textview_forgot_password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textview_no_account_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_vertical_margin"
            android:gravity="center"
            android:text="@string/fragment_login_register_question"
            android:textColor="@color/primary"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/button_submit"
            app:layout_constraintStart_toStartOf="@id/button_submit"
            app:layout_constraintTop_toBottomOf="@id/button_submit"
            app:layout_constraintVertical_bias="0.2" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>