<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/on_primary"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".ui.authentication.resetpassword.ResetPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/progressbar_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:cardBackgroundColor="@color/white"
            app:strokeColor="@color/secondary"
            app:cardCornerRadius="@dimen/default_radius">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/primary_variant"
                />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_vertical_margin"
            android:gravity="center"
            android:text="@string/fragment_reset_password_message"
            android:textColor="@color/primary"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/edittext_email_reset_password"
            app:layout_constraintEnd_toEndOf="@id/edittext_email_reset_password"
            app:layout_constraintStart_toStartOf="@id/edittext_email_reset_password"
            app:layout_constraintVertical_bias="0.2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edittext_email_reset_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_edittext_horizontal_margin"
            android:hint="@string/common_email"
            android:textColorHint="@color/on_secondary"
            app:boxBackgroundColor="@color/secondary"
            app:boxCornerRadiusBottomEnd="@dimen/default_radius"
            app:boxCornerRadiusBottomStart="@dimen/default_radius"
            app:boxCornerRadiusTopEnd="@dimen/default_radius"
            app:boxCornerRadiusTopStart="@dimen/default_radius"
            app:boxStrokeColor="@color/on_secondary"
            app:boxStrokeWidth="0dp"
            app:hintTextColor="@color/on_secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/on_secondary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_submit_reset_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_button_height"
            android:layout_marginTop="@dimen/default_vertical_margin"
            android:text="@string/common_submit"
            app:cornerRadius="@dimen/default_radius"
            app:layout_constraintEnd_toEndOf="@id/edittext_email_reset_password"
            app:layout_constraintStart_toStartOf="@id/edittext_email_reset_password"
            app:layout_constraintTop_toBottomOf="@id/edittext_email_reset_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>